# GGJ22

./: Cargo.toml  README.md
assets/: dancing_panda.aseprite  map.txt  pand1.aseprite  thrown_panda.aseprite
physics-platformer/: Cargo.toml
src/: main.rs  mover.rs  panda_factory.rs  stork_factory.rs  tilemap.rs
tiled/: Cargo.toml
unused_assets/: heart.aseprite  map.txt  walking_cupid_panda.aseprite  walking_cupid_panda_black.aseprite  walking_panda.aseprite
