[package]
name = "p-date"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-tiled = { path = "./tiled" }
macroquad-platformer = { path = "./physics-platformer" }
kira = "0.5.3"